--- a/public/global.css
+++ b/public/global.css
@@ -64,3 +64,58 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+/* Global Styles & Colors */
+:root {
+	--green: #6aaa64;
+	--darkendGreen: #538d4e;
+	--yellow: #c9b458;
+	--darkendYellow: #b59f3b;
+	--lightGray: #d8d8d8;
+	--gray: #86888a;
+	--darkGray: #939598;
+	--white: #fff;
+	--black: #212121;
+	font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+	--tile-size: 2rem;
+
+	--global-background: #fff;
+	--global-outline: #333;
+	--global-text: #fff;
+	--global-text-on-bg: #777;
+	--global-text-subdue: #666;
+
+	--global-green: #6aaa64;
+	--global-yellow: #c9b458;
+	--global-gray: #86888a;
+}
+
+/*
+Alternate dark mode, set in javascript
+*/
+[data-theme="dark"] {
+	--global-background: #000;
+	--global-outline: #ddd;
+	--global-text: #fff;
+	--global-text-on-bg: #fff;
+	--global-text-subdue: #bbb;
+
+	--global-green: #538d4e;
+	--global-yellow: #b59f3b;
+	--global-gray: #535558;
+}
+
+/*
+Alternate light mode, set in javascript
+*/
+[data-theme="light"] {
+	--global-background: #fff;
+	--global-outline: #333;
+	--global-text: #fff;
+	--global-text-on-bg: #777;
+	--global-text-subdue: #666;
+
+	--global-green: #6aaa64;
+	--global-yellow: #c9b458;
+	--global-gray: #86888a;
+}
